--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   </head>
 
   <body>
-    <h1>QR Code Component</h1>
+    <main>
+      <section class="container">
+        <img src="./images/image-qr-code.png" />
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </section>
+    </main>
   </body>
 
 </html>
