--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+    <!-- Preconnects to Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Links to Google Fonts stylesheet for Inter and Outfit fonts with specific weights -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit&display=swap"
+      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@700&display=swap"
+      rel="stylesheet">
+
+    <!-- Links to the external CSS stylesheet -->
     <link rel="stylesheet" href="style.css">
 
     <title>Frontend Mentor | QR code component</title>
@@ -12,12 +25,18 @@
 
   <body>
     <main>
+      <!-- Container for the QR code and content -->
       <section class="container">
+        <!-- Displays the QR code image -->
         <img src="./images/image-qr-code.png" />
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
+        <div class="content">
+          <!-- Main heading for the content -->
+          <h1>Improve your front-end skills by building projects</h1>
+          <!-- Paragraph providing additional information -->
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+          </p>
+        </div>
       </section>
     </main>
   </body>
