fix image without alternate text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Container for the QR code and content -->
       <section class="container">
         <!-- Displays the QR code image -->
-        <img src="./images/image-qr-code.png" />
+        <img src="./images/image-qr-code.png" alt="qr code" />
         <div class="content">
           <!-- Main heading for the content -->
           <h1>Improve your front-end skills by building projects</h1>
